Version 0.22.1 (2022-01-15)
- Add VALVE_STATE for hm climate
- Add entity_type to attributes

Version 0.22.0 (2022-01-14)
- Move client management to central
- Add rooms
- Move calls to create_devices and start_connection_checker

Version 0.21.2 (2022-01-13)
- Add ERROR_LOCK form HmIP-DLD
- Remove ALARM_EVENTS

Version 0.21.1 (2022-01-13)
- Fix event identification and generation

Version 0.21.0 (2022-01-13)
- Remove typecast for text, binary_sensor and number
- Don't exclude Servicemeldungen from sysvars
- Use Servicemeldungen sysvar for hub state
- Add test for HM-CC-VG-1 (HM-Heatinggroup)
- Remove additional typecasts for number

Version 0.20.0 (2022-01-12)
- Add converter to BaseParameterEntity/GenericEntity
- Fix number entities returning None when 0

Version 0.19.0 (2022-01-11)
- Mark secondary channels name with a V --> Vch

Version 0.18.1 (2022-01-10)
- Reduce some log_level
- Fix callback to notify un_reach

Version 0.18.0 (2022-01-09)
- Add config option to specify storage directory
- Move Exceptions to own module
- Add binary_sensor platform for SVs
- Add config check
- Add hub_entities_by_platform
- Remove option_enable_sensors_for_system_variables

Version 0.17.1 (2022-01-09)
- Fix naming for multi channel custom entities

Version 0.17.0 (2022-01-09)
- Refactor entity definition
    - improve naming
    - classify entities (primary, secondary, sensor, Generic, Event)
- remove option_enable_virtual_channels from central
- remove entity.create_in_ha. Replaced by HmEntityUsage

Version 0.16.2 (2022-01-08)
- Fix enum str in entity definition

Version 0.16.1 (2022-01-08)
- Use helper for device_name
- Add logging to show usage of unique_id in name
- Add HmIPW-WRC6 to custom entities
- Add HmIP-SCTH230 to custom entities
- Refactor entity definition
    - Remove unnecessary field names from additional entity definitions
    - Add additional entity definitions by device type

Version 0.16.0 (2022-01-08)
- Return unique_id if name is not in cache