@@ -149,6 +149,8 @@ IGNORED_PARAMETERS_WILDCARDS_START = [
     "WEEK_PROGRAM",
 ]
 
+ACCEPT_PARAMETER_ONLY_ON_CHANNEL = {"LOWBAT": 0}
+
 HIDDEN_PARAMETERS = [EVENT_UN_REACH, EVENT_STICKY_UN_REACH, EVENT_CONFIG_PENDING]
 
 BACKEND_CCU = "CCU"
